# accion

./: .gitignore  Cargo.toml  README.md  build.rs  test.acn
src/: ast.c  ast.h  ast.rs  builtins.rs  disjoint_set.rs  expr.rs  id_map.rs  interpreter.rs  lang.l  lang.y  lib.rs  lliter.rs  main.rs  parse_ctx.h  parser.c  parser.h  parser.rs  scoping.rs  sexp.rs  types.rs  typing.rs  values.rs
src/analysis/: backend.rs  constexpr.rs  mod.rs  purity.rs  scoping.rs  typing.rs
test/: test_purity.acn  test_purity_bad_defn.acn  test_purity_bad_global.acn
tests/: test_consteval.rs  test_purity.rs  test_typeexpr.rs  utils.acn  utils.rs
